esiena/charlie work

--- a/index.html
+++ b/index.html
@@ -13,17 +13,21 @@
     <div class="header">
         <h1>Farmwise</h1>
         <h2>Fresh Eats</h2>
+        <p>Eat Fresh, Eat Local</p>
       </div>
-      <form action="#"> 
-        <input type="text"
-            placeholder="Address"
-            name="search"> 
-        <button> 
-            <i class="fa fa-search"
-                style="font-size: 18px;"> 
-            </i> 
-        </button> 
-    </form> 
+      <div class="search"> 
+        <form action="#"> 
+            <input type="text"
+                placeholder="Address"
+                name="search"> 
+            <button> 
+                <i class="fa fa-search"
+                    style="font-size: 18px;"> 
+                </i> 
+            </button> 
+        </form> 
+    </div> 
+</div> 
 
 
 </body>
