--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href=".styles.css">
-    <link rel="script" href="./script.js">
-    <script type='text/javascript' src='http://www.bing.com/api/maps/mapcontrol?callback=GetMap&branch=release&setLang=en-US&key=AhmEVg3cDIQvEx4OvVH3WN-1ioOTBoC4176hphjoyr8OlMHoPDHNfmIq8VQLVGbO' async defer></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <!-- <link rel="stylesheet" href=".styles.css"> -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!-- <script type='text/javascript' src='http://www.bing.com/api/maps/mapcontrol?callback=GetMap&branch=release&setLang=en-US&key=AhmEVg3cDIQvEx4OvVH3WN-1ioOTBoC4176hphjoyr8OlMHoPDHNfmIq8VQLVGbO' async defer></script> -->
+    <script src="jquery-3.5.1.min.js"></script>
 </head>
 <body>
-    <div class="header">
+    <!-- <div class="header">
         <h1>Farmwise</h1>
         <h2>Fresh Eats</h2>
         <p>Eat Fresh, Eat Local</p>
@@ -27,8 +27,8 @@
             </button> 
         </form> 
     </div> 
-</div> 
-
+</div>  -->
+<script src="script.js" type="text/javascript"></script>
 
 </body>
 </html>
