--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href=".styles.css">
-    <link rel="script" href="./script.js">
-    <script type='text/javascript' src='http://www.bing.com/api/maps/mapcontrol?callback=GetMap&branch=release&setLang=en-US&key=AhmEVg3cDIQvEx4OvVH3WN-1ioOTBoC4176hphjoyr8OlMHoPDHNfmIq8VQLVGbO' async defer></script>
+    <!-- <script type='text/javascript' src='http://www.bing.com/api/maps/mapcontrol?callback=GetMap&branch=release&setLang=en-US&key=AhmEVg3cDIQvEx4OvVH3WN-1ioOTBoC4176hphjoyr8OlMHoPDHNfmIq8VQLVGbO' async defer></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
 </head>
 <body>
     <div class="header">
@@ -29,6 +29,6 @@
     </div> 
 </div> 
 
-
+<script src="script.js"></script>
 </body>
 </html>
