--- a/index.html
+++ b/index.html
@@ -4,31 +4,49 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href=".styles.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="script" href="./script.js">
     <script type='text/javascript' src='http://www.bing.com/api/maps/mapcontrol?callback=GetMap&branch=release&setLang=en-US&key=AhmEVg3cDIQvEx4OvVH3WN-1ioOTBoC4176hphjoyr8OlMHoPDHNfmIq8VQLVGbO' async defer></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
+      crossorigin="anonymous"
+    />
 </head>
 <body>
     <div class="header">
         <h1>Farmwise</h1>
         <h2>Fresh Eats</h2>
         <p>Eat Fresh, Eat Local</p>
+        <div class="search"> 
+            <form action="#"> 
+                <input type="text"
+                    placeholder="Address"
+                    name="search"> 
+                <button> 
+                    <i class="fa fa-search"
+                        style="font-size: 18px;"> 
+                    </i> 
+                </button> 
+            </form> 
       </div>
-      <div class="search"> 
-        <form action="#"> 
-            <input type="text"
-                placeholder="Address"
-                name="search"> 
-            <button> 
-                <i class="fa fa-search"
-                    style="font-size: 18px;"> 
-                </i> 
-            </button> 
-        </form> 
+      
     </div> 
 </div> 
+<div id="farmersMarketList">
+    <h3>Farmer's Market List</h3>
+    <ol>
+       
+    </ol>
+</div>
+<div id="myMap">
+    map will be placed here
+</div>
 
-
+<div id="chosenMarket">
+    additional info about chosen market will go here
+</div>
 </body>
 </html>
