--- a/index.html
+++ b/index.html
@@ -8,12 +8,10 @@
 
     <link rel="stylesheet" href=".styles.css"> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script type='text/javascript' src='http://www.bing.com/api/maps/mapcontrol?callback=GetMap&branch=release&setLang=en-US&key=AhmEVg3cDIQvEx4OvVH3WN-1ioOTBoC4176hphjoyr8OlMHoPDHNfmIq8VQLVGbO' async defer></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
     <link rel="stylesheet" href="styles.css">
     <link rel="script" href="./script.js">
-    <script type='text/javascript' src='http://www.bing.com/api/maps/mapcontrol?callback=GetMap&branch=release&setLang=en-US&key=AhmEVg3cDIQvEx4OvVH3WN-1ioOTBoC4176hphjoyr8OlMHoPDHNfmIq8VQLVGbO' async defer></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <link
       rel="stylesheet"
@@ -24,7 +22,7 @@
 
 </head>
 <body>
-    <!-- <div class="header">
+    <div class="header">
         <h1>Farmwise</h1>
         <h2>Fresh Eats</h2>
         <p>It's always better local!</p>
@@ -43,7 +41,7 @@
         </form>
       </div>
     </div>
-    <div id="myMap">
+    <div id="mapDiv">
         Map will load here
     </div>
 
