--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 </head>
 <body>
-    <!-- <div class="header">
+    <div class="header">
         <h1>Farmwise</h1>
         <h2>Fresh Eats</h2>
         <p>It's always better local!</p>
