--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
     <link rel="stylesheet" href="styles.css">
+    <link rel="script" 
     <link rel="script" href="./script.js">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <link
@@ -55,6 +56,7 @@
     </ul>
     </div>
 <container>
-
+<script src="config.js"></script>
+<script src="linkPreview.js"></script>
 </body>
 </html>
