working to pop list of markets

--- a/index.html
+++ b/index.html
@@ -58,5 +58,6 @@
 <container>
 <script src="config.js"></script>
 <script src="linkPreview.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
