added additional row and column to hold more info about selected market

--- a/index.html
+++ b/index.html
@@ -67,15 +67,14 @@
       <div class="col s7 push-s5"><span class="flow-text"><div id="mapDiv">Map will load here</div></span></div>
       <div class="col s5 pull-s7"><span class="flow-text"><div id="farmersList">
       <ul>
-        <li>This will</li>
-        <li>hold a list</li>
-        <li>of the markets</li>
-        <li>in sequential order</li>
-        <li>by distance</li>
+        This will hold the list of markets
       </ul>
     </div>
     </span>
   </div>
+  </div>
+  <div class="row">
+    <div class="col s7 push-s5"><span class="flow-text"><div id="moreInfo">This Will Hold Additional Info about selected Market</div></span></div>
   </div>
 
    
