--- a/index.html
+++ b/index.html
@@ -6,12 +6,11 @@
     <title>Document</title>
 
 
-    <link rel="stylesheet" href=".styles.css"> -->
+    
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-
+    <script src="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.4.3/build/ol.js"></script>
     <link rel="stylesheet" href="styles.css">
-    <link rel="script" 
     <link rel="script" href="./script.js">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <link
@@ -42,7 +41,7 @@
         </form>
       </div>
     </div>
-    <div id="mapDiv">
+    <div class="map" id="map">
         Map will load here
     </div>
 
