added CDN links for OpenLayers Geocoder

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 
 
 =======
+    <!-- Import Geocoding Library for Map pin data -->
+    <link href="https://cdn.jsdelivr.net/npm/ol-geocoder@latest/dist/ol-geocoder.min.css" rel="stylesheet"> 
     <!--Import Google Icon Font-->
     <link
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
@@ -84,7 +86,7 @@
   </div>
 
    
-
+    <script src="https://cdn.jsdelivr.net/npm/ol-geocoder"></script>
     <script type="text/javascript" src="js/materialize.min.js"></script>
     <script src="config.js"></script>
     <script src="linkPreview.js"></script>
