added divs to hold additional info about market

--- a/index.html
+++ b/index.html
@@ -5,13 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
 
-<<<<<<< HEAD
-=======
-
-=======
-    <!-- Import Geocoding Library for Map pin data -->
-    <link href="https://cdn.jsdelivr.net/npm/ol-geocoder@latest/dist/ol-geocoder.min.css" rel="stylesheet"> 
->>>>>>> 4356ff9b4dc61624bc94b7773297e29003ce9702
     <!--Import Google Icon Font-->
     <link
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
@@ -76,15 +69,21 @@
 
     <div class="row">
       <div class="col s7 push-s5"><span class="flow-text"><div class="map" id="map">Map will load here</div></span></div>
-      <div class="col s5 pull-s7"><span class="flow-text"><div id="farmersList">
-      <ul>
-      </ul>
+      <div class="col s5 pull-s7"><span class="flow-text"><a class="waves-effect waves-light btn"></a>
+        <div id="farmersList">  
     </div>
     </span>
   </div>
   </div>
   <div class="row">
-    <div class="col s7 push-s5"><span class="flow-text"><div id="moreInfo">This Will Hold Additional Info about selected Market</div></span></div>
+    <div class="col s7 push-s5"><span class="flow-text"><div id="moreInfo">This Will Hold Additional Info about selected Market</div>
+    <div id="address">
+    </div>
+    <div id="schedule">
+    </div>
+    <div id="products">
+    </div>
+    </span></div>
   </div>
 
 
