info populating, but not for specific button clicked, only for [0], as the test was designed

--- a/index.html
+++ b/index.html
@@ -76,15 +76,17 @@
   </div>
   </div>
   <div class="row">
-    <div class="col s7 push-s5"><span class="flow-text"><div id="moreInfo">This Will Hold Additional Info about selected Market</div>
+    <div class="col s7 push-s5"><span class="flow-text"><div id="moreInfo">
     <div id="address">
     </div>
-    <div id="schedule">
-    </div>
+    <br>
     <div id="products">
     </div>
+    <br>
+    <div id="schedule">
+    </div>
     </span></div>
-  </div>
+  </div></div>
 
 
     <div id="farmersList">
