--- a/index.html
+++ b/index.html
@@ -90,13 +90,13 @@
 
     <div class="row">
       <div class="col s7"><span class="flow-text"><div class="map" id="map"></div></span></div>
-      <div class="col s5"><span class="flow-text hide"><div id="farmersList">Farmers List
+      <div class="col s5"><span class="flow-text"><div id="farmersList">
     </div>
     </span>
   </div>
   </div>
   <div class="row">
-    <div class="col s7"><span class="flow-text hide"><div id="moreInfo"><h3>more info</h3>
+    <div class="col s7"><span class="flow-text"><div id="moreInfo"><h3></h3>
     <div id="address">
     </div>
     <br>
@@ -108,12 +108,6 @@
     </span></div>
   </div></div>
 
-
-    <div id="farmersList" class="hide"><h3>Farmers List</h3>
-    <ul>
-    </ul>
-    </div>
-<container>
 <script src="https://cdn.jsdelivr.net/npm/ol-geocoder"></script>  
 <script src="config.js"></script>
 <script src="linkPreview.js"></script>
