aligned search bar with search button, took out unnecessary styling.

--- a/index.html
+++ b/index.html
@@ -44,16 +44,9 @@
   <body>
     <nav>
         <div class="nav-wrapper">
-          <h1 class="brand-logo center">Welcome To....</h1>
-          <!--<form>
-            <div class="input-field">
-              <input id="search" type="search" required placeholder="Enter Zip Code">
-              <label class="label-icon" for="search"><i class="material-icons">search</i></label>
-              <i class="material-icons">close</i>
-            </div>
-          </form>-->
+          <h4 class="brand-logo center">Welcome To....</h1>
 
-          <ul id="nav-mobile" class="right hide-on-med-and-down">
+          <ul id="nav-mobile" class="right">
             <li><a href="sass.html">About US</a></li>
           </ul> 
         </div>
@@ -63,6 +56,7 @@
       <h2>Fresh Eats</h2>
       <p>It's always better local!</p>
     </div>
+
 
     <div class="container">
       <div id="content">
@@ -74,14 +68,7 @@
               class="form-control search-form"
               placeholder="Enter Zip Code"
             />
-            <span class="input-group-btn" style="width: 40px">
-              <button
-                id="search-this"
-                type="button"
-                class="pull-right btn btn-default search-btn"
-              >
-                <i class="fa fa-search"></i>
-              </button>
+            <span class="input-group-btn" style="width: 40px"><a href="#!" class="btn waves-effect waves-teal">Search</a>
             </span>
           </div>
         </form>
