--- a/index.html
+++ b/index.html
@@ -11,15 +11,10 @@
       rel="stylesheet"
     />
     <!--Import materialize.css-->
-    <link
-      type="text/css"
-      rel="stylesheet"
-      href="css/materialize.min.css"
-      media="screen,projection"
-    />
     <link rel="stylesheet" 
           href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
     />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
     <!--Import OpenLayers mapping protocol-->
     <script src="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.4.3/build/ol.js"></script>
@@ -43,21 +38,15 @@
   </head>
   <body>
     <nav>
-        <div class="nav-wrapper">
-          <h1 class="brand-logo center">Welcome To....</h1>
-          <!--<form>
-            <div class="input-field">
-              <input id="search" type="search" required placeholder="Enter Zip Code">
-              <label class="label-icon" for="search"><i class="material-icons">search</i></label>
-              <i class="material-icons">close</i>
-            </div>
-          </form>-->
-
-          <ul id="nav-mobile" class="right hide-on-med-and-down">
-            <li><a href="sass.html">About US</a></li>
-          </ul> 
-        </div>
-      </nav>
+      <div class="nav-wrapper">
+        <h1 class="brand-logo center">Welcome To...</h1>
+        <ul class="left hide-on-med-and-down">
+          <li class="active"><a href="./index.html">Home</a></li>
+          <li><a href="./aboutUs.html">About Us</a></li>
+          <li><a href="badges.html">Placeholder</a></li>
+        </ul>
+      </div>
+    </nav>
     <div class="header">
       <h1>Farmwise</h1>
       <h2>Fresh Eats</h2>
