--- a/index.html
+++ b/index.html
@@ -70,14 +70,11 @@
     </div> 
 
     <div class="row">
-      <div class="col s7"><span class="flow-text"><div class="map" id="map"></div></span></div>
-      <div class="col s5"><span class="flow-text"><div id="farmersList">
-    </div>
-    </span>
-  </div>
+      <div class="col s6"><span class="flow-text"></span><div class="map" id="map"></div></span></div>
+      <div class="col s6"><span class="flow-text"><div id="farmersList"></div></span></div>
   </div>
   <div class="row">
-    <div class="col s7"><span class="flow-text"><div id="moreInfo"><h3></h3>
+    <div class="col s6"><span class="flow-text"><div id="moreInfo">
     <div id="address">
     </div>
     <br>
@@ -87,7 +84,7 @@
     <div id="schedule">
     </div>
     </span></div>
-  </div></div>
+  </div>
 
 <script src="https://cdn.jsdelivr.net/npm/ol-geocoder"></script>  
 <script src="config.js"></script>
