--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <p>It's always better local!</p>
     </div>
 
-
+    <div id="storedZips"></div>
     <div class="container">
       <div id="content">
         <form class="form-inline">
