got storage to store and call. Creates a button for zip. Working on button click to search again.

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <p>It's always better local!</p>
     </div>
 
-    <div id="storedZips"></div>
+    <div id="storedZips">Most recent zipcodes searched:</div>
     <div class="container">
       <div id="content">
         <form class="form-inline">
