fixed background image problem. Noted materialize problem on index.html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
-    <!--Import materialize.css-->
+    <!--Import materialize.css This is giving an error message because href doesn't exist.-->
     <link
       type="text/css"
       rel="stylesheet"
