--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Import materialize.css-->
-    <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -80,8 +80,8 @@
     </div> 
 
     <div class="row">
-      <div class="col s6"><span class="flow-text"></span><div class="map" id="map"></div></span></div>
-      <div class="col s6"><span class="flow-text"><div id="farmersList"></div></span></div>
+      <div class="col m6"><span class="flow-text"></span><div class="map" id="map"></div></span></div>
+      <div class="col m6"><span class="flow-text"><div id="farmersList"></div></span></div>
   </div>
   <div class="row">
     <div class="col s6"><span class="flow-text"><div id="moreInfo">
