--- a/index.html
+++ b/index.html
@@ -79,9 +79,12 @@
       </div>
     </div> 
 
+    
     <div class="row">
-      <div class="col m6"><span class="flow-text"></span><div class="map" id="map"></div></span></div>
-      <div class="col m6"><span class="flow-text"><div id="farmersList"></div></span></div>
+      <div class="col s12 m3"></div>
+      <div class="col s12 m3"><span class="flow-text"></span><div class="map" id="map"></div></span></div>
+      <div class="col s12 m3"><span class="flow-text"><div id="farmersList"></div></span></div>
+      <div class="col s12 m3"></div>
   </div>
   <div class="row">
     <div class="col s6"><span class="flow-text"><div id="moreInfo">
