--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
               class="form-control search-form"
               placeholder="Enter Zip Code"
             />
-            <span class="input-group-btn" style="width: 40px"><a href="#!" class="btn waves-effect waves-teal">Search</a>
+            <span class="input-group-btn" style="width: 40px"><a href="#!" class="btn waves-effect waves-teal lighten-1">Search</a> 
             </span>
           </div>
         </form>
@@ -81,23 +81,18 @@
 
     
     <div class="row">
-      <div class="col s12 m3"></div>
-      <div class="col s12 m3"><span class="flow-text"></span><div class="map" id="map"></div></span></div>
-      <div class="col s12 m3"><span class="flow-text"><div id="farmersList"></div></span></div>
-      <div class="col s12 m3"></div>
+      <div class="col s12 m4"><span class="flow-text"></span><div class="map" id="map"></div></span></div>
+      <div class="col s12 m4"><div id="moreInfo"></div>
+          <div id="address">
+          </div>
+          <br>
+          <div id="products">
+          </div>
+          <br>
+          <div id="schedule">
+          </div>  
   </div>
-  <div class="row">
-    <div class="col s6"><span class="flow-text"><div id="moreInfo">
-    <div id="address">
-    </div>
-    <br>
-    <div id="products">
-    </div>
-    <br>
-    <div id="schedule">
-    </div>
-    </span></div>
-  </div>
+  <div class="col s12 m4"><span class="flow-text"><div id="farmersList"></div></span></div>
 
         <!--JavaScript at end of body for optimized loading-->
         <script type="text/javascript" src="js/materialize.min.js"></script>
