--- a/index.html
+++ b/index.html
@@ -81,13 +81,12 @@
 
     
     <div class="row">
-      <div class="col s12 m3" id="newTitle"></div>
-      <div class="col s12 m3"><span class="flow-text"></span><div class="map" id="map"></div></span></div>
-      <div class="col s12 m3"><span class="flow-text"><div id="farmersList"></div></span></div>
-      <div class="col s12 m3"></div>
+      <div class="col s12 m4" id="newTitle"></div>
+      <div class="col s12 m4"><span class="flow-text"></span><div class="map" id="map"></div></span></div>
+      <div class="col s12 m4"><span class="flow-text"><div id="farmersList"></div></span></div>
   </div>
   <div class="row">
-    <div class="col s6"><span class="flow-text"><div id="moreInfo">
+    <div><span class="flow-text"><div id="moreInfo">
     <br>
     <div id="products">
     </div>
