--- a/index.html
+++ b/index.html
@@ -83,7 +83,11 @@
 
     
     <div class="row">
-      <div class="col s12 m4" id="newTitle"></div>
+      <div class="col s12 m4" id="newTitle">
+        <h1>Farmwise</h1>
+      <h2>Fresh Eats</h2>
+      <p>It's always better local!</p>
+      </div>
       <div class="col s12 m4"><span class="flow-text"></span><div class="map" id="map"></div></span></div>
       <div class="col s12 m4"><span class="flow-text"><div id="farmersList"></div></span></div>
   </div>
@@ -99,7 +103,6 @@
     </div>
     </span></div>
   </div>
-  
 
         <!--JavaScript at end of body for optimized loading-->
         <script type="text/javascript" src="js/materialize.min.js"></script>
