--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   <body>
     <nav>
       <div class="nav-wrapper">
-        <!-- <h3 class="brand-logo center">Welcome To...</h3> -->
+        <h3 class="brand-logo center">Welcome To...</h3>
         <ul class="left hide-on-med-and-down">
           <li class="active"><a href="./index.html">Home</a></li>
           <li><a href="./aboutUs.html">About Us</a></li>
@@ -86,7 +86,6 @@
       <div class="col s12 m4" id="newTitle">
         <h1>Farmwise</h1>
       <h2>Fresh Eats</h2>
-      <p>It's always better local!</p>
       </div>
       <div class="col s12 m4"><span class="flow-text"></span><div class="map" id="map"></div></span></div>
       <div class="col s12 m4"><span class="flow-text"><div id="farmersList"></div></span></div>
