working on animation

--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
               placeholder="Enter Zip Code"
             />
             <span class="input-group-btn" style="width: 40px"><a href="#!" class="btn waves-effect waves-teal lighten-1">Search</a> 
+            <div class="images-arrow"></div>
             </span>
           </div>
         </form>
