created topTen page + fixed tab links

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Home Page</title>
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Lato&display=swap" rel="stylesheet">
@@ -48,11 +48,9 @@
     <nav>
       <div class="nav-wrapper">
         <h3 class="brand-logo center">Welcome To...</h3>
-        <ul class="left hide-on-med-and-down">
-          <li class="active"><a href="./index.html">Home</a></li>
-          <li><a href="./aboutUs.html">About Us</a></li>
-          <!-- I don't think we needed the below line?-->
-          <!-- <li><a href="badges.html">Placeholder</a></li> -->
+        <ul class="left">
+          <li class="active"><a href="./index.html" target="_self">Home</a></li>
+          <li><a href="aboutUs.html" target="_self">About Us</a></li>
         </ul>
       </div>
     </nav>
