fixed image sources

--- a/topTen.html
+++ b/topTen.html
@@ -62,7 +62,7 @@
           </p>
           <br>
           <figure class="image is-256x256">
-            <img src="file:///Users/eekwofia/BootCamp/Farmwise_FreshEats/Images/fresher.jpg">
+            <img src="Images/fresher.jpg">
           </figure>
           <h5>
           2. SEASONALITY
@@ -74,7 +74,7 @@
           due to the fact that humans ate seasonally for thousands of years before modern refrigeration technology changed all that.             </p>
           <br>
           <figure class="image is-256x256">
-            <img src="file:///Users/eekwofia/BootCamp/Farmwise_FreshEats/Images/inseason.jpg">
+            <img src="Images/inseason.jpg">
           </figure>
           <h5>
           3. IT JUST TASTES BETTER
@@ -86,7 +86,7 @@
           </p>
           <br>
           <figure class="image is-256x256">
-            <img src="file:///Users/eekwofia/BootCamp/Farmwise_FreshEats/Images/tasty.jpg">
+            <img src="Images/tasty.jpg">
           </figure>
           <h5>
           4.  MORE NUTRITIOUS
@@ -99,7 +99,7 @@
           </p>
           <br>
           <figure class="image is-256x256">
-            <img src="file:///Users/eekwofia/BootCamp/Farmwise_FreshEats/Images/nutrition.gif">
+            <img src="Images/nutrition.gif">
           </figure>
           <h5>
           5. BETTER FOR THE ENVIRONMENT
@@ -113,7 +113,7 @@
           </p>
           <br>
           <figure class="image is-256x256">
-            <img src="file:///Users/eekwofia/BootCamp/Farmwise_FreshEats/Images/environment.jpg">
+            <img src="Images/environment.jpg">
           </figure>
           <h5>
           6.  SUPPORT FAMILY FARMS
@@ -126,7 +126,7 @@
           </p>
           <br>
           <figure class="image is-256x256">
-            <img src="file:///Users/eekwofia/BootCamp/Farmwise_FreshEats/Images/familyfarm.jpg">
+            <img src="Images/familyfarm.jpg">
           </figure>
           <h5>
           7.  KEEP IT LOCAL
@@ -139,7 +139,7 @@
           </p>
           <br>
           <figure class="image is-256x256">
-            <img src="file:///Users/eekwofia/BootCamp/Farmwise_FreshEats/Images/local.jpg">
+            <img src="Images/local.jpg">
           </figure>
           <h5>
           8. VARIETY IS THE SPICE OF LIFE
@@ -152,7 +152,7 @@
           </p>
           <br>
           <figure class="image is-256x256">
-            <img src="file:///Users/eekwofia/BootCamp/Farmwise_FreshEats/Images/variety.jpg">
+            <img src="Images/variety.jpg">
           </figure>
           <h5>
           9. Organic and Non-GMO
@@ -164,7 +164,7 @@
           </p>
           <br>
           <figure class="image is-256x256">
-            <img src="file:///Users/eekwofia/BootCamp/Farmwise_FreshEats/Images/organic.jpg">
+            <img src="Images/organic.jpg">
           </figure>
           <h5>
           10. Affordable 
@@ -176,7 +176,7 @@
           to your health are likely to save you money on healthcare expenses over the long-term.
           </p>
           <figure class="image is-256x256">
-            <img src="file:///Users/eekwofia/BootCamp/Farmwise_FreshEats/Images/fresh.jpg">
+            <img src="Images/fresh.jpg">
           </figure>
           <br>
 
