added images to the carousel

--- a/topTen.html
+++ b/topTen.html
@@ -139,7 +139,7 @@
           </p>
           <br>
           <figure class="image is-256x256">
-            <img src="Images/local.jpg">
+            <img src="Images/familyfarm.jpg">
           </figure>
           <h5>
           8. VARIETY IS THE SPICE OF LIFE
