changed font size of nav bar links

--- a/topTenCarousel.html
+++ b/topTenCarousel.html
@@ -43,8 +43,8 @@
       <div class="nav-wrapper">
         <h3 class="brand-logo center">Farmwise Fresh Eats</h3>
         <ul class="left">
-          <li class="active"><a href="./index.html" target="_self">Home</a></li>
-          <li><a href="aboutUs.html" target="_self">About Us</a></li>
+          <li class="active"><a class= "navitem" href="./index.html" target="_self">Home</a></li>
+          <li><a class= "navitem" href="aboutUs.html" target="_self">About Us</a></li>
         </ul>
       </div>
     </nav>
