--- a/topTenCarousel.html
+++ b/topTenCarousel.html
@@ -61,7 +61,7 @@
             shipping, no sitting around in storage for weeks, no gassing to simulate the ripening process - just fresh REAL food, straight from the farm.
           </p>
           <figure class="image is-128x128">
-            <img src="Images/fresh.jpg">
+            <img src="Images/fresh.jpg" id="fresh">
           </figure>
         </div>
         
