deleted commented-out code

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -6,10 +6,7 @@
     <title>About Us</title>
 
     <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Lato&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Lato&display=swap" rel="stylesheet"/>
     <!--Import Google Icon Font-->
     <link
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
@@ -20,25 +17,14 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
     />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-
-    <!--Import OpenLayers mapping protocol
-    <script src="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.4.3/build/ol.js"></script>
-    <link rel="stylesheet" href="styles.css" 
-    />
-    -->
-
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <!--Import JQuery library-->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
     <link rel="stylesheet" href="./styles.css" />
     <link rel="script" link rel="script" href="./script.js" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-
+    
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
@@ -77,126 +63,16 @@
           community- and the environment as a whole.
         </p>
       </div>
-      <!--
-          <h4>TEN REASONS TO SHOP AT FARMERS MARKETS</h4>
-          <br>
-          <h5>
-          1. FRESHNESS
-          </h5>
-          <br>
-          <p>
-          Farmer’s market produce is nearly the exact opposite of grocery store fruits and vegetables.  Produce one finds at the grocery store is often sitting around for several 
-          days before it even reaches store shelves, and is often shipped from thousands of miles away in refrigerated trucks.  Farmer's market produce, on the other hand, is the 
-          freshest and tastiest available.  Fruits and vegetables are allowed to fully-ripen in the field and are picked shortly before arriving at the market stand - no long-distance
-          shipping, no sitting around in storage for weeks, no gassing to simulate the ripening process - just fresh REAL food, straight from the farm.
-          </p>
-          <br>
-          <h5>
-          2. SEASONALITY
-          </h5>
-          <br>
-          <p>
-          The food bought at the farmers market is seasonal. It’s fresh, delicious and reflects the truest flavors of the season. Shopping and cooking from the farmers market may 
-          not only help one to reconnect with their region’s seasonal cycles, but also, some scientists suggest eating seasonal produce is actually better for your body.  This is 
-          due to the fact that humans ate seasonally for thousands of years before modern refrigeration technology changed all that.             </p>
-          <br>
-          <h5>
-          3. IT JUST TASTES BETTER
-          </h5>
-          <br>
-          <p>
-          Try buying an apple from the supermarket, then go and buy one from the farmers market and do a taste test.  Produce from the farmer’s market almost always tastes better.  
-          This is because they are picked at the peak of their ripeness when the plant’s natural sugars are at their peak.  
-          </p>
-          <br>
-          <h5>
-          4.  MORE NUTRITIOUS
-          </h5>
-          <br>
-          <p>
-          Eating produce when it is ripe not only tastes better, but it also provides the best nutrition possible.  Much food found in grocery stores is highly processed and grown 
-          using pesticides, hormones, antibiotics, and genetic modification. Some of it has been irradiated, waxed, or gassed in transit, which can have an array of negative effects             on our health.  Now take one look at the vivid colors of produce found at the farmer's market, these beautiful colors are a reflection of the nutrients they contain.  
-          Many local farmers cultivate extremely nutritious produce through their careful farming methods.
-          </p>
-          <br>
-          <h5>
-          5. BETTER FOR THE ENVIRONMENT
-          </h5>
-          <br>
-          <p>
-          It is estimated that food in the U.S. travels an average of 1,500 miles to get to your plate. All this shipping uses large amounts of natural resources (especially fossil 
-          fuels), contributes to pollution, and creates trash with extra packaging.  Along with conserving fossil fuels, small family farms produce less environmental waste in the 
-          form of carbon monoxide, pesticide use, and chemical fertilizers. They are also less likely to utilize giant processing and sorting machines that contribute to environmental 
-          decay.
-          </p>
-          <br>
-          <h5>
-          6.  SUPPORT FAMILY FARMS
-          </h5>
-          <br>
-          <p>
-          There's no doubt small local family farms have decreased in numbers over the years, succumbing to the high cost of running a farm and increasingly stiff competition from giant 
-          conglomerate-run farms that produce massive amounts of extremely cheap produce. Purchasing fruits and vegetables from farmer's markets, however, supports local family farms, 
-          giving them the valuable capital they need to keep operating and providing consumers an alternative to mass-produced foods
-          </p>
-          <br>
-          <h5>
-          7.  KEEP IT LOCAL
-          </h5>
-          <br>
-          <p>
-          The offerings at farmer’s markets are typically grown near where you live, not thousands of miles away or even in an another country. Shopping at farmers markets supports your 
-          local farmers and keeps the money you spend on food closer to your community. Speaking of community, farmers markets are a great place to gather. Visiting is a fun family activity, 
-          and you can meet members of your community. Some farmer's markets even offer entertainment and classes, making it a terrific way to while away an afternoon.
-          </p>
-          <br>
-          <h5>
-          8. VARIETY IS THE SPICE OF LIFE
-          </h5>
-          <br>
-          <p>
-          At the farmers market you find a dizzying array of fruits and vegetables that you don’t see in your average supermarket: red carrots, a rainbow of heirloom tomatoes, purple cauliflower, 
-          stinging nettles, green garlic, watermelon radishes, quail eggs, maitake mushrooms, and much, much more. Industrial farms tend to grow only a few varieties of popular vegetables. Small 
-          local farms, on the other hand, tend to favor variety, offering fruits and vegetables you just won't be able to find in the produce section of your local supermarket.
-          </p>
-          <br>
-          <h5>
-          9. Organic and non-GMO
-          </h5>
-          <br>
-          <p>
-          Many farmers participating in local farmer's markets use organic methods to grow their produce. Most label it as such, so you can be certain you are purchasing chemical-free products. 
-          They also are more likely to use non-modified seeds. Organic farming is better for the soil, the environment, and your body.
-          </p>
-          <br>
-          <h5>
-          10. Affordable
-          </h5>
-          <br>
-          <p>
-          Considering the amount of sheer nutrition one gets from farmer's market produce compared to organic produce at the supermarket, it's actually a really good value. Grocery stores tend to
-          charge exorbitant prices for organic fruits and vegetables. At the farmer's market, however; they are typically not priced much more than conventionally grown produce, and the benefits 
-          to your health are likely to save you money on healthcare expenses over the long-term.
-          </p>
-          <br>
-        
-        </div>
-
-      -->
 
       <div class="card-tabs">
         <ul class="tabs tabs-fixed-width">
           <li class="tab">
-            <a href="./topTenCarousel.html" target="_self"
-              >Top Ten Reasons To Shop At Farmer's MArkets</a
-            >
+            <a href="./topTenCarousel.html" target="_self">Top Ten Reasons To Shop At Farmer's MArkets</a>
           </li>
           <li class="tab"><a href="./index.html" target="_self">Home</a></li>
         </ul>
       </div>
     </div>
-
-    <!-- <script type="text/javascript" src="js/materialize.min.js"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="config.js"></script>
