--- a/topTenCarousel.html
+++ b/topTenCarousel.html
@@ -161,6 +161,23 @@
             </figure>
         </div>
 
+        <footer id="footer" class="page-footer" style="position:fixed; bottom:0; left:0; width: 100%;">
+          <div class="container">
+            <div class="row">
+              <div class="col l6 s12">
+              </div>
+              <div class="col l4 offset-l2 s12">
+              </div>
+            </div>
+          </div>
+          <div class="footer-copyright text-center">
+            <div class="container text-center">
+            Farmwise Fresh Eats © 2021 
+            <a class="grey-text text-lighten-4 right"></a>
+            </div>
+          </div>
+        </footer>
+
   
       
       
@@ -173,10 +190,10 @@
       <script>
         $(document).ready(function() {
           $('.carousel.carousel-slider').carousel({
-    fullWidth: true,
-    indicators: true
-  });
+            fullWidth: true,
+            indicators: true
         });
+  });
 
       </script>
       </body>
