added footer to idex

--- a/index.html
+++ b/index.html
@@ -111,6 +111,9 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 <script src="config.js"></script>
 <script src="script.js"></script>
+<footer id="footer">
+  <p>Made with &hearts;  by team not-chuck-norris</p>
+</footer>
 </body>
 </html>
 
