--- a/aboutUs.html
+++ b/aboutUs.html
@@ -73,6 +73,9 @@
         </ul>
       </div>
     </div>
+    <footer id="footer">
+      <p>Made with &hearts;  by team not-chuck-norris</p>
+    </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="config.js"></script>
